Реализованы алгоритмы: 1) Разворот строки; 2) Вывод последовательности Фибоначчи; 3) Сортировка выбором (Сортировка Пузырьком дописывается)

--- a/src/components/ui/common.css
+++ b/src/components/ui/common.css
@@ -4,6 +4,8 @@
 
   --common-border-radius: 14px;
 
+  --button-width: 205px;
+
   --text-color-primary: #292929;
   --text-color-secondary: #fff;
 
